@@ -18,6 +18,7 @@ Changes in this release:
     UNSPECIFIC no optimisations
     EDGE       optimise for MS Edge and Internet Explorer
     Defaults to UNSPECIFIC
+* Feature: enhanced error output for SQLite (if supported by library version)
 
 * Bugfix: Fix lost frames at end of files (files where cut short)
 * Bugfix: Fix crash when video files were transcoded to audio only (e.g. mp3)
